--- a/index.html
+++ b/index.html
@@ -17,9 +17,32 @@
 </head>
 <body>
   <header>
+    <div class="header">
+      <h1>Code Journal</h1>
+    </div>
   </header>
-  <main>
-  </main>
+  <div class="container">
+
+    <h2> New Entry </h2>
+    <div class="row">
+      <div class="column-half">
+        <img src="images/placeholder-image-square.jpg" alt="placeholder-image-square">
+      </div>
+      <div class="column-half">
+        <h3>Title</h3>
+        <input type="text" name="title" size="100" maxlength="30" />
+        <h3>Photo URL</h3>
+        <input type="text" name="photo" size="100" maxlength="30" />
+      </div>
+      <div class="column-full">
+        <h3>Notes</h3>
+        <textarea name="notes" cols="10" rows="10"> kms </textarea>
+        <div class="button">
+          <button type="button">SAVE</button>
+        </div>
+      </div>
+    </div>
+  </div>
   <script src="js/data.js"></script>
   <script src="js/main.js"></script>
 </body>
