--- a/index.html
+++ b/index.html
@@ -15,41 +15,71 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/layout.css">
   <link rel="stylesheet" href="css/styles.css">
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous" ></script>
 </head>
 <body>
   <header>
-    <div class="header">
-      <h1>Code Journal</h1>
+    <div class="header-one">
+      <div class="top-header">
+        <h1 class="code-journal-header">Code Journal </h1>
+        <h4 class="entries-header"> <a href="#" id="entries-header"> Entries </a> </h4>
+      </div>
     </div>
   </header>
   <div class="container">
-    <div data-view="entry-form">
-      <form id="form" action="/action_page.php">
+    <div data-view="entry-form" id="entry-form">
+      <form class="hidden" id="form" action="/action_page.php">
         <h2> New Entry </h2>
         <div class="row">
           <div class="column-half">
-            <img src="images/placeholder-image-square.jpg" alt="placeholder-image-square">
+            <img class="placeholder" src="images/placeholder-image-square.jpg" alt="placeholder-image-square">
           </div>
           <div class="column-half">
-
             <label for="title">Title</label>
-            <input type="text" name="title" size="100" required/>
+            <input id="title" type="text" name="title" size="100" required/>
             <label for="photo"> Photo URL </label>
             <input id="photoUrl" type="text" name="photo" size="100" required/>
           </div>
           <div class="column-full">
             <label for="notes">Notes</label>
-            <textarea id="notes" name="notes" cols="10" rows="10" required> </textarea>
+            <textarea id="notes" name="notes" rows="10" required></textarea>
             <div id="button">
               <input type="submit" name="save" id="submit" value="SAVE">
+            </div>
+            <div class="delete-entry">
+              <a href="#" class="delete-entry hidden" id="delete-button"> Delete Entry </a>
             </div>
           </div>
         </div>
       </form>
     </div>
+    <div data-view="entries" id="entries">
+      <div class="row">
+        <div class="column-entries">
+          <h2> Entries </h2>
+          <div id="entries-button">
+            <input type="submit" name="save" id="new" value="New">
+          </div>
+        </div>
+        <div class="column-full" id="entry-root">
+          <div class="placeholder-form" id="placeholder-form">
+            <p class="place-holder-description"> No entries have been recorded </p>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-  <div id="div1"></div>
-
+  <div class="modal hidden" id="modal">
+    <div class="modal-content">
+      <div class="modal-header">
+        <p class="modal-p"> Are you sure you want to delete this entry? </p>
+      </div>
+      <div class="modal-body">
+        <button id="button-cancel" type="button"> CANCEL </button>
+        <button id="button-confirm" type="button"> CONFIRM </button>
+      </div>
+    </div>
+  </div>
   <script src="js/data.js"></script>
   <script src="js/main.js"></script>
 </body>
